--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,8 +2,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.sparkapps.friendzone.MainActivity">
+
+    <item android:title="@string/my_profile"
+        android:id="@+id/action_my_profile" />
+    <item android:title="@string/edit_bucketlist"
+        android:id="@+id/action_my_bucketlist" />
     <item android:title="@string/logout_menu_label"
         android:id="@+id/action_logout" />
-    <item android:title="@string/edit_friends_menu_label"
-        android:id="@+id/action_edit_friends" />
 </menu>
