--- a/app/src/main/res/layout/activity_popular_list.xml
+++ b/app/src/main/res/layout/activity_popular_list.xml
@@ -1,23 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_popular_list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
-
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="350dp"
-        app:srcCompat="@drawable/convo"
-        android:id="@+id/imageView" />
+    tools:context="com.sparkapps.friendzone.PopularListActivity">
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:id = "@android:id/list"/>
-
 </RelativeLayout>
