--- a/app/src/main/res/layout/fragment_inbox.xml
+++ b/app/src/main/res/layout/fragment_inbox.xml
@@ -6,15 +6,15 @@
     >
 
 
-    <ImageView
+  <!--  <ImageView
         android:layout_width="wrap_content"
         android:layout_height="350dp"
         app:srcCompat="@drawable/convo"
-        android:id="@+id/imageView" />
+        android:id="@+id/imageView" />-->
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
